--- a/html/index.html
+++ b/html/index.html
@@ -283,29 +283,25 @@ body::before {
           <h2 class="text-2xl font-bold">Why Choose Us?</h2>
         </div>
         <ul class="space-y-4">
-          <li class="flex items-start group">
-            <div class="w-8 h-8 rounded-full bg-emerald-500/20 flex items-center justify-center mr-3 group-hover:bg-emerald-500/30 transition-colors">
-              <i class="fa-solid fa-check text-emerald-300 text-sm"></i>
-            </div>
-            <span class="text-emerald-100/90 group-hover:text-white transition-colors">Track calories and nutrients with precision</span>
+          <li class="flex items-start">
+            <i class="fa-solid fa-chart-line text-emerald-400 mt-1 mr-3"></i>
+            <span><b>User Meal Tracking</b> – Track daily meals, calories, and nutrition trends.</span>
           </li>
-          <li class="flex items-start group">
-            <div class="w-8 h-8 rounded-full bg-emerald-500/20 flex items-center justify-center mr-3 group-hover:bg-emerald-500/30 transition-colors">
-              <i class="fa-solid fa-check text-emerald-300 text-sm"></i>
-            </div>
-            <span class="text-emerald-100/90 group-hover:text-white transition-colors">Personalized meal recommendations</span>
+          <li class="flex items-start">
+            <i class="fa-solid fa-globe text-emerald-400 mt-1 mr-3"></i>
+            <span><b>Health Map</b> – Discover the healthiest countries based on recipe data.</span>
           </li>
-          <li class="flex items-start group">
-            <div class="w-8 h-8 rounded-full bg-emerald-500/20 flex items-center justify-center mr-3 group-hover:bg-emerald-500/30 transition-colors">
-              <i class="fa-solid fa-check text-emerald-300 text-sm"></i>
-            </div>
-            <span class="text-emerald-100/90 group-hover:text-white transition-colors">Connect with nutrition experts</span>
+          <li class="flex items-start">
+            <i class="fa-solid fa-bowl-food text-emerald-400 mt-1 mr-3"></i>
+            <span><b>Meal Builder</b> – Generate dishes using the healthiest ingredients.</span>
           </li>
-          <li class="flex items-start group">
-            <div class="w-8 h-8 rounded-full bg-emerald-500/20 flex items-center justify-center mr-3 group-hover:bg-emerald-500/30 transition-colors">
-              <i class="fa-solid fa-check text-emerald-300 text-sm"></i>
-            </div>
-            <span class="text-emerald-100/90 group-hover:text-white transition-colors">Progress tracking and health insights</span>
+          <li class="flex items-start">
+            <i class="fa-solid fa-scale-balanced text-emerald-400 mt-1 mr-3"></i>
+            <span><b>Ingredient Comparison</b> – Compare meals by ingredient health impact.</span>
+          </li>
+          <li class="flex items-start">
+            <i class="fa-solid fa-filter text-emerald-400 mt-1 mr-3"></i>
+            <span><b>Nutrient Filters</b> – Filter dishes by calories, protein, and more.</span>
           </li>
         </ul>
       </div>
