FIX: redirects html

--- a/html/admin.html
+++ b/html/admin.html
@@ -647,7 +647,10 @@ body {
 // ====================
 // CONFIGURATION
 // ====================
-const API_URL = "http://127.0.0.1:8000";
+const API_URL =
+  window.location.hostname === "localhost"
+    ? "http://127.0.0.1:8000"
+    : "https://restapi-udl-nutriscore.onrender.com/";
 let CURRENT_USER_ID = null;
 
 // ====================
