FIX: console.log

--- a/html/home.html
+++ b/html/home.html
@@ -689,6 +689,7 @@ let healthMapData = null;
 // AUTH & INITIALIZATION
 // ====================
 const token = localStorage.getItem("access_token");
+console.log(API_URL)
 if (!token) {
     window.location.href = "/";
 }
